change prediction table height on smaller screens from fixed to responsive

--- a/src/components/investmentPrediction/components/investmentPredictionTable/investmentPredictionTable.module.scss
+++ b/src/components/investmentPrediction/components/investmentPredictionTable/investmentPredictionTable.module.scss
@@ -15,6 +15,7 @@
   box-sizing: border-box;
 
   @include mixins.respond-to(md) {
-    height: 400px;
+    height: auto;
+    max-height: 400px;
   }
 }
